--- a/app/src/main/res/layout/fragment_complaint.xml
+++ b/app/src/main/res/layout/fragment_complaint.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Complaint">
+    tools:context=".Student.Complaint">
 
     <RelativeLayout
         android:layout_width="match_parent"
