--- a/app/src/main/res/layout/fragment_complaint.xml
+++ b/app/src/main/res/layout/fragment_complaint.xml
@@ -13,16 +13,15 @@
         >
 
         <Spinner
-            style="@style/Widget.AppCompat.Spinner.DropDown"
             android:id="@+id/cat_spinner"
+            style="@style/Widget.AppCompat.Spinner.DropDown"
             android:layout_width="200dp"
             android:layout_height="50dp"
-            android:prompt="@string/app_name"
             android:layout_below="@+id/Rl"
-            android:background="@drawable/spinner_back"
             android:layout_centerHorizontal="true"
-            android:spinnerMode="dropdown"
-            />
+            android:background="@drawable/spinner_back"
+            android:prompt="@string/app_name"
+            android:spinnerMode="dropdown" />
 
 
         <Spinner
