--- a/app/src/main/res/layout/activity_basic_details.xml
+++ b/app/src/main/res/layout/activity_basic_details.xml
@@ -20,7 +20,7 @@
             android:ems="10"
             android:drawableLeft="@drawable/ic_action_email"
             android:background="@drawable/edittext"
-            android:textSize="20sp"
+            android:textSize="15sp"
             />
         <EditText
             android:id="@+id/L_Name"
@@ -34,7 +34,7 @@
             android:ems="10"
             android:drawableLeft="@drawable/ic_action_email"
             android:background="@drawable/edittext"
-            android:textSize="18sp"
+            android:textSize="15sp"
             />
         <EditText
             android:id="@+id/Bday"
@@ -48,7 +48,7 @@
             android:clickable="true"
             android:drawableLeft="@drawable/ic_action_email"
             android:background="@drawable/edittext"
-            android:textSize="20sp"
+            android:textSize="15sp"
             />
         <Spinner
             android:id="@+id/Blood"
@@ -60,8 +60,8 @@
             android:layout_marginLeft="20dp"
             android:ems="10"
             android:drawableLeft="@drawable/ic_action_email"
-            android:background="@drawable/edittext"
-            android:textSize="20sp"
+            android:background="@drawable/spinner_back"
+            android:textSize="15sp"
             >
 
         </Spinner>
@@ -77,7 +77,7 @@
             android:inputType="textEmailAddress"
             android:drawableLeft="@drawable/ic_action_email"
             android:background="@drawable/edittext"
-            android:textSize="20sp"
+            android:textSize="15sp"
             />
         <EditText
             android:id="@+id/Mobile"
@@ -85,33 +85,32 @@
             android:layout_height="40dp"
             android:hint="Mobile(Self)"
             android:layout_below="@+id/P_Email"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="15sp"
             android:ems="10"
             android:inputType="phone"
 
             android:drawableLeft="@drawable/ic_action_email"
             android:background="@drawable/edittext"
-            android:textSize="20sp"
+            android:textSize="15sp"
             />
 
         <EditText
             android:id="@+id/Height"
             android:layout_width="150dp"
             android:layout_height="40dp"
-            android:hint="Height"
+            android:hint="Height (in cms)"
             android:layout_below="@+id/Bday"
             android:layout_marginTop="20dp"
-
             android:ems="10"
             android:drawableLeft="@drawable/ic_action_email"
             android:background="@drawable/edittext"
-            android:textSize="20sp"
+            android:textSize="15sp"
             />
         <EditText
             android:id="@+id/Weight"
             android:layout_width="150dp"
             android:layout_height="40dp"
-            android:hint="Weight"
+            android:hint="Weight (in kgs)"
             android:layout_below="@+id/Blood"
             android:layout_toRightOf="@id/Height"
             android:layout_marginTop="20dp"
@@ -119,7 +118,7 @@
             android:ems="10"
             android:drawableLeft="@drawable/ic_action_email"
             android:background="@drawable/edittext"
-            android:textSize="20sp"
+            android:textSize="15sp"
             />
 
         <TextView
