--- a/app/src/main/res/layout/activity_parent_details.xml
+++ b/app/src/main/res/layout/activity_parent_details.xml
@@ -19,7 +19,7 @@
             android:ems="10"
             android:drawableLeft="@drawable/ic_action_email"
             android:background="@drawable/edittext"
-            android:textSize="20sp"
+            android:textSize="15sp"
             />
 
         <EditText
@@ -29,10 +29,11 @@
             android:hint="Father's Mobile"
             android:layout_below="@+id/F_Name"
             android:layout_marginTop="20dp"
+            android:inputType="number"
             android:ems="10"
             android:drawableLeft="@drawable/ic_action_email"
             android:background="@drawable/edittext"
-            android:textSize="20sp"
+            android:textSize="15sp"
             />
         <EditText
             android:id="@+id/M_Name"
@@ -44,7 +45,7 @@
             android:ems="10"
             android:drawableLeft="@drawable/ic_action_email"
             android:background="@drawable/edittext"
-            android:textSize="20sp"
+            android:textSize="15sp"
             />
         <EditText
             android:id="@+id/M_Mobile"
@@ -53,10 +54,11 @@
             android:hint="Mother's Mobile"
             android:layout_below="@+id/M_Name"
             android:layout_marginTop="20dp"
+            android:inputType="number"
             android:ems="10"
             android:drawableLeft="@drawable/ic_action_email"
             android:background="@drawable/edittext"
-            android:textSize="20sp"
+            android:textSize="15sp"
             />
 
         <EditText
@@ -71,7 +73,7 @@
             android:layout_marginTop="20dp"
             android:scrollbars="vertical"
             android:background="@drawable/edittext"
-            android:textSize="20sp"
+            android:textSize="15sp"
             />
         <androidx.cardview.widget.CardView
             android:id="@+id/Next"
