--- a/app/src/main/res/layout/fragment_new__student.xml
+++ b/app/src/main/res/layout/fragment_new__student.xml
@@ -3,7 +3,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Warden.New_Student">
+    tools:context=".Student.Contact_Warden">
 
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <GridView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/dashgrid"
+            android:numColumns="1"
+            />
+    </LinearLayout>
 
 </FrameLayout>
