--- a/app/src/main/res/layout/item_new_student.xml
+++ b/app/src/main/res/layout/item_new_student.xml
@@ -23,26 +23,58 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Name"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 android:textAllCaps="true"
                 android:textStyle="bold"
+                android:layout_margin="2dp"
                 android:textColor="@color/black"/>
-
-            <TextView
-                android:id="@+id/Time"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Time"
+                android:orientation="horizontal">
+                <TextView
+                android:id="@+id/Branch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Branch"
+                android:textSize="15sp"
+                android:layout_margin="2dp"
+                android:textColor="@color/black"/>
+                <TextView
+                    android:id="@+id/Year"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Year"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginLeft="25dp"
+                    android:textSize="15sp"
+                    android:textColor="@color/black"/>
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/category"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:text="Category"
                 android:textSize="15dp"
                 android:textColor="@color/black"/>
 
             <TextView
-                android:id="@+id/Duration"
+                android:id="@+id/Seater"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Duration"
+                android:layout_margin="2dp"
+                android:text="Seater"
                 android:textSize="15dp"
-                android:textColor="@color/black"/>
+                android:textColor="@color/black"
+                />
+
+            <Button
+                android:id="@+id/Approve"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Approve"/>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
