--- a/app/src/main/res/layout/item_new_student.xml
+++ b/app/src/main/res/layout/item_new_student.xml
@@ -32,6 +32,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
+
                 <TextView
                 android:id="@+id/Branch"
                 android:layout_width="wrap_content"
@@ -40,13 +41,14 @@
                 android:textSize="15sp"
                 android:layout_margin="2dp"
                 android:textColor="@color/black"/>
+
                 <TextView
                     android:id="@+id/Year"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Year"
                     android:layout_marginTop="2dp"
-                    android:layout_marginLeft="25dp"
+                    android:layout_marginLeft="10dp"
                     android:textSize="15sp"
                     android:textColor="@color/black"/>
             </LinearLayout>
@@ -70,11 +72,20 @@
                 android:textColor="@color/black"
                 />
 
+            <Spinner
+                android:id="@+id/rooms"
+                android:layout_margin="2dp"
+                android:background="@drawable/spinner_back"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"/>
+
             <Button
                 android:id="@+id/Approve"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Approve"/>
+
         </LinearLayout>
+
     </androidx.cardview.widget.CardView>
 </LinearLayout>
