--- a/app/src/main/res/layout/fragment_rounds.xml
+++ b/app/src/main/res/layout/fragment_rounds.xml
@@ -1,10 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Rounds">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".Warden.Rounds"
+    android:gravity="center">
+
+    <Spinner
+        android:id="@+id/Round"
+        android:layout_width="320dp"
+        android:layout_height="40dp"
+        android:hint="School Of"
+        android:layout_below="@+id/Rl"
+        android:layout_marginTop="20dp"
+        android:ems="10"
+        android:drawableLeft="@drawable/ic_action_email"
+        android:background="@drawable/spinner_back"
+        android:textSize="15sp"/>
+
+    <EditText
+        android:id="@+id/Comments"
+        android:layout_width="320dp"
+        android:layout_height="wrap_content"
+        android:hint="Comments"
+        android:layout_below="@+id/Round"
+        android:inputType="textMultiLine"
+        android:lines="4"
+        android:maxLines="10"
+        android:layout_marginTop="20dp"
+        android:scrollbars="vertical"
+        android:background="@drawable/edittext"
+        android:textSize="15sp"
+        />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/Submit"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_below="@+id/Comments"
+        android:layout_marginTop="40dp"
+        app:cardBackgroundColor="@color/cardbackground"
+        app:cardCornerRadius="25dp"
+        app:cardElevation="10dp"
+        >
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+
+            <TextView
+                android:id="@+id/user_reg1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Register"
+                android:textColor="@color/white"
+                android:layout_centerInParent="true"
+                android:textSize="20sp"
+                />
+        </RelativeLayout>
+
+    </androidx.cardview.widget.CardView>
 
 
 
-</FrameLayout>
+</RelativeLayout>
