--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -5,15 +5,26 @@
     android:id="@+id/mobile_navigation"
     app:startDestination="@+id/nav_dash">
     <fragment
+        android:id="@+id/nav_my_profile"
+        android:name="com.example.myapplication.ui.NavigationItems.MyProfile"
+        android:label="My Profile"
+        tools:layout="@layout/fragment_my_profile"/>
+
+    <fragment
         android:id="@+id/nav_dash"
         android:name="com.example.myapplication.StudentDashboardF"
         android:label="Dashboard"
         tools:layout="@layout/fragment_student_dashboard"/>
 
-
+    <fragment
+        android:id="@+id/nav_about_us"
+        android:name="com.example.myapplication.ui.NavigationItems.AboutUs"
+        tools:layout="@layout/fragment_about_us"
+        android:label="About Us"/>
     <fragment
         android:id="@+id/nav_send"
         android:name="com.example.myapplication.ui.NavigationItems.SendFragment"
         android:label="@string/menu_send"
         tools:layout="@layout/fragment_send" />
+
 </navigation>
